<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.activity.LanguageActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/chooseLang"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/russianLang"
        app:layout_constraintStart_toStartOf="@id/selectLanguage"
        app:layout_constraintTop_toBottomOf="@id/selectLanguage"
        android:layout_marginTop="50dp">
        <RadioButton
            android:id="@+id/russianLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"/>
        <RadioButton
            android:id="@+id/kyrgyzLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kyrgyz"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/selectLanguage"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@id/selectLanguage"/>

</androidx.constraintlayout.widget.ConstraintLayout>